# watchdogfs

./: .gitignore  Cargo.toml  README.md  build.rs  compile_files.sh  config.yaml  output.txt
.github/workflows/: ci.yml
scripts/: cross-compile.sh
src/: lib.rs  main.rs  prelude.rs
src/alerts/: local_script.rs  mod.rs  plugin.rs  syslog.rs  webhook.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  settings.rs
src/integrity/: baseline.rs  checksum.rs  mod.rs
src/logger/: mod.rs
src/selfcheck/: mod.rs
src/utils/: mod.rs
src/watcher/: inotify.rs  mod.rs  polling.rs
test/: integration_tests.rs
